turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:4: error: not found: value setCouleurSol
      setCouleurSol(Color.black)
      ^LangtonsAnt:11: error: not found: value setCouleurSol
      setCouleurSol(Color.white)
      ^