turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  var count = 0
  while( count< 12000){
    if(getCouleurSol()==Color.white){
      setCouleurSol(Color.black)
      baisseBrosse()
      leveBrosse()
      droite()
      avance()
    }
    if(getCouleurSol()==Color.black){
      setCouleurSol(Color.white)
      baisseBrosse()
      leveBrosse()
      gauche()
      avance()
    }
  }
}
